<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/desert"
        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_pay"
                style="@style/my_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_pay"
                android:textColor="#090606"
                android:textSize="24sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:paddingBottom="100dp">

            <Button
                android:id="@+id/btn_addition"
                style="@style/my_style"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="4dp"
                android:gravity="center_horizontal"
                android:text="@string/addition"
                android:textColor="#090606"
                android:textSize="24sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:paddingBottom="150dp">

            <Button
                android:id="@+id/btn_food"
                style="@style/my_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/food"
                android:textColor="#090606" />

            <Button
                android:id="@+id/btn_drink"
                style="@style/my_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/drink"
                android:textColor="#090606" />


        </LinearLayout>

    </FrameLayout>


</LinearLayout>