<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/desert"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ListView
        android:id="@+id/lv_order"
        style="@style/my_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/result_layout_price_tv"
            style="@style/my_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:minHeight="48dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_address"
            style="@style/my_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/enter_your_address"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63" />

        <Button
            android:id="@+id/btn_location"
            style="@style/my_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#8D6E63"
            android:text="@string/site" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_finish"
        style="@style/my_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#3C3737"
        android:text="@string/finish" />

</LinearLayout>